@@ -34,7 +34,8 @@ BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):
 023 ==> 207293 : when showing whole collection status bar filters don't work.
 024 ==> 206670 : after deleting an image the image before the deleted image is displayed/selected instead of the image after the deleted one.
 025 ==> 208160 : After edition image has different colors in QT nad GTK+ applications.
-026 ==> 
+026 ==> 207332 : editor works on the wrong image if a new one was chosen while processing.
+027 ==> 
 
 
 *********************************************************************************************************
